--- a/src/styles/cards/SmallCard.module.css
+++ b/src/styles/cards/SmallCard.module.css
@@ -1,13 +1,12 @@
 ﻿/* BigCard */
 
 .card {
-	display: block;
-	flex-direction: column;
+	display: flex;
+	flex-direction: row;
 	padding: var(--space-2);
 	padding: 9px;
 	position: relative;
 	width: auto;
-	height: 100%;
 	border-bottom: 1px solid #ced2d9;
 	text-align: center
 }
@@ -115,8 +114,7 @@
 
 		.card .card__cover,
 		.card .card__cover--none {
-			min-width: 366.5px;
-			max-width: 100%;
-			max-height: 100%;
+			max-width: 150px;
+			max-height: 150px;
 		}
 }
