--- a/src/styles/FrontPage.module.css
+++ b/src/styles/FrontPage.module.css
@@ -1,13 +1,21 @@
 ﻿.side__container {
-  display: grid;
-  
-  justify-content: left;
-  height: fit-content;
-  width: fit-content;
+	display: grid;
+	justify-content: left;
+	height: fit-content;
+	width: 33%;
+	padding: 0 15px 0 15px;
 }
 
 .main__container {
 	display: flex;
 	height: auto;
-	width: 66%
+	width: 100%;
+}
+
+.first__container {
+	display: flex;
+	flex-direction: column;
+	height: auto;
+	width: 66%;
+	padding: 0 15px 0 15px;
 }
