--- a/src/styles/cards/BigCard.module.css
+++ b/src/styles/cards/BigCard.module.css
@@ -7,8 +7,7 @@
 	padding: 9px;
 	position: relative;
 	width: auto;
-	height: 100%;
-	border-bottom: 1px solid #ced2d9;
+	height: auto;
 	text-align: center
 }
 
@@ -17,8 +16,8 @@
 	}
 
 	.card .card__cover {
-		width: auto;
-		height: auto;
+		width: 100%;
+		max-height: 500px;
 		-o-object-fit: cover;
 		object-fit: cover;
 	}
@@ -30,9 +29,9 @@
 	}
 
 	.card .card__title {
-		font-family: var(--font-family-sans);
+		font-family: var(--font-family-slab);
 		font-weight: 800;
-		font-size: var(--font-size-7);
+		font-size: var(--font-size-6);
 		line-height: var(--line-height-6);
 		letter-spacing: -0.025em;
 		margin: var(--space-3) 0;
@@ -51,14 +50,18 @@
 		font-weight: 400;
 		font-size: var(--font-size-4);
 		line-height: var(--line-height-3);
-		margin-top: 0;
+		margin: 25px 0;
 		text-align: left
 	}
 
-	.card .card__date {
-		font-weight: 600;
-		font-family: var(--font-family-sans);
-		font-size: var(--font-size-1);
+	.card .card__footer {
+		display: flex;
+		justify-content: space-between;
+		font-weight: 300;
+		font-family: var(--font-family-serif);
+		font-size: 12px;
+		font-style: italic;
+		color: #AAAAAA;
 		margin-top: calc(var(--space-4) + 7);
 		text-align: left
 	}
@@ -89,22 +92,9 @@
 		border-bottom-right-radius: 3px;
 	}
 
-@media (min-width: 575px) {
-	.card {
-		border: 1px solid #ced2d9;
-		border-bottom: none;
-	}
 
-		.card .card__title {
-			margin-top: var(--space-4);
-		}
 
-		.card:last-child {
-			border-bottom: 1px solid #ced2d9;
-		}
-}
-
-@media (min-width: 800px) {
+@media (max-width: 1199px) {
 	.card {
 		flex-direction: row;
 	}
@@ -115,8 +105,6 @@
 
 		.card .card__cover,
 		.card .card__cover--none {
-			min-width: 366.5px;
-			max-width: 100%;
-			max-height: 100%;
+			max-height: 400px;
 		}
 }
