--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,6 +13,7 @@
   --font-family-sans: Inter;
   --font-family-serif: PT Serif;
   --font-family-mono: IMB Plex Mono;
+  --font-family-display: Adamina, Arial, Helvetica, sans-serif;
 
   --font-size-0: 12px;
   --font-size-1: 14px;
@@ -67,110 +68,11 @@ body {
   margin: 0;
 }
 
-/* Post page */
-.post {
-  width: 100%;
-  margin: var(--space-1) 0 var(--space-4);
-}
-
-.post .post__cover,
-.post .post__cover--none {
-  width: 100%;
-  height: 200px;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-
-.post .post__cover--none {
-  background: var(--black);
-}
-
-.post .post__container {
-  padding: 0 var(--space-3);
-}
-
-.post .post__content {
-  font-family: var(--font-family-serif);
-  font-weight: 400;
-  font-size: var(--font-size-4);
-  line-height: var(--line-height-5);
-  letter-spacing: -0.02em;
-  margin-top: var(--space-6);
-
-  /* Targeting tags in PortableText */
-}
-
-.post .post__content blockquote {
-  border-left: 5px solid var(--black);
-  padding-left: var(--space-3);
-  margin-left: var(--space-4);
-}
-
-.post .post__content a {
-  color: var(--blue-600);
-  text-decoration: none;
-}
-
-.post .post__title {
-  font-family: var(--font-family-sans);
-  font-size: var(--font-size-7);
-  line-height: var(--line-height-6);
-  margin: var(--space-4) 0;
-  font-weight: 800;
-}
-
-.post .post__excerpt {
-  font-family: var(--font-family-serif);
-  font-size: var(--font-size-5);
-  line-height: var(--line-height-4);
-  margin-top: 0;
-  font-weight: 400;
-}
-
-.post .post__date {
-  font-family: var(--font-family-sans);
-  font-weight: 600;
-  font-family: var(--font-family-sans);
-  font-size: var(--font-size-1);
-  line-height: var(--line-height-1);
-  margin-top: var(--space-4);
-}
-
-@media (min-width: 800px) {
-  .post .post__cover,
-  .post .post__cover--none {
-    width: 750px;
-    height: 380px;
-  }
-
-  .post .post__title {
-    font-size: var(--font-size-10);
-    line-height: var(--line-height-10);
-    margin: var(--space-6) 0 0;
-    letter-spacing: -0.025em;
-  }
-
-  .post .post__excerpt {
-    font-size: var(--font-size-5);
-    line-height: var(--line-height-5);
-    margin-top: var(--space-3);
-    margin-bottom: var(--space-3);
-  }
-
-  .post .post__date {
-    font-size: var(--font-size-3);
-    line-height: var(--line-height-2);
-    margin-top: var(--space-0);
-  }
-
-  .post .post__content {
-    margin-top: var(--space-7);
-  }
-}
 
 /* Layout */
 .container {
-  margin: 0 auto;
+    width: 1200px;
+    margin: 0 auto;
 }
 
 main {
@@ -216,8 +118,9 @@ main {
 
 @media (min-width: 575px) {
   .container {
-    max-width: var(--max-width-1);
-    padding: 0 var(--space-4);
+    max-width: 1200px;
+    
+    margin: 0 auto;
   }
 
   main {
@@ -244,12 +147,6 @@ main {
 
 /* Welcome component */
 
-.welcome__container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: var(--space-2) var(--space-2);
-}
 
 .logos {
   display: none;
@@ -290,9 +187,6 @@ main {
 }
 
 @media (min-width: 575px) {
-  .welcome__container {
-    width: 100%;
-  }
 
   .logos {
     display: flex;
