added styles and stuff

--- a/src/styles/FrontPage.module.css
+++ b/src/styles/FrontPage.module.css
@@ -9,13 +9,13 @@
 .main__container {
 	display: flex;
 	height: auto;
-	width: 100%;
+	width: 1200px;
 }
 
 .first__container {
 	display: flex;
 	flex-direction: column;
 	height: auto;
-	width: 66%;
+	width: 58.333%;
 	padding: 0 15px 0 15px;
 }
