--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -71,36 +71,18 @@ body {
 
 /* Layout */
 .container {
-    width: 1200px;
-    margin: 0 auto;
+    width: 100%; 
 }
+
+
 
 main {
   margin-top: 45px;
-}
-
-.header {
   display: flex;
-  padding: 0 var(--space-1);
-  border-bottom: 1px solid #ced2d9;
-
-  z-index: 10;
-  background: var(--white);
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
+  justify-content: center;
 }
 
-.header .header__title {
-  font-weight: 800;
-  font-size: var(--font-size-3);
-  line-height: var(--line-height-1);
-  padding-left: var(--space-2);
-  margin: var(--space-3) 0;
-  text-decoration: none;
-  color: var(--black);
-}
+
 
 .footer {
   display: flex;
@@ -117,120 +99,18 @@ main {
 }
 
 @media (min-width: 575px) {
-  .container {
-    max-width: 1200px;
-    
-    margin: 0 auto;
-  }
-
+  
   main {
     margin-top: unset;
   }
 
-  .header {
-    position: unset;
-    border-bottom: none;
-    margin: var(--space-3) 0;
-    padding: var(--space-2) 0;
-    background: unset;
-  }
-
-  .header .header__title {
-    margin: var(--space-3) 0 var(--space-2);
-    font-size: var(--font-size-5);
-  }
 
   .footer {
     margin: var(--space-3) 0;
   }
 }
 
-/* Welcome component */
 
 
-.logos {
-  display: none;
-}
-
-.steps {
-  flex-direction: column;
-  width: 100%;
-}
-
-.steps .steps__list {
-  list-style-type: none;
-  padding: 0;
-}
-
-.steps .steps__entry {
-  margin-bottom: var(--space-4);
-}
-
-.steps .steps__title {
-  font-size: var(--font-size-5);
-  line-height: var(--line-height-2);
-}
-
-.steps .steps__subtitle {
-  font-size: var(--font-size-3);
-  line-height: var(--line-height-2);
-}
-
-.steps .steps__text {
-  font-family: var(--font-family-serif);
-  line-height: var(--line-height-2);
-}
-
-.steps .steps__text a {
-  color: var(--blue-600);
-  text-decoration: none;
-}
-
-@media (min-width: 575px) {
-
-  .logos {
-    display: flex;
-    align-items: center;
-    margin: var(--space-6) 0 var(--space-5) 0;
-  }
-
-  .logos .logos__blur {
-    display: flex;
-    position: absolute;
-    width: 375px;
-    height: 115px;
-    background: var(--magenta-100);
-    filter: blur(82px);
-    transform: rotate(-19deg);
-    z-index: -1;
-  }
-
-  .logos .logos__plus {
-    display: flex;
-    font-family: var(--font-family-sans);
-    font-weight: 800;
-    font-size: var(--font-size-7);
-    line-height: var(--line-height-6);
-    margin: 0 var(--space-4);
-  }
-
-  .logos .logos__entry {
-    display: flex;
-  }
-
-  .steps {
-    max-width: var(--max-width-0);
-    display: flex;
-    padding: 0;
-  }
-
-  .steps .steps__subtitle {
-    margin-top: var(--space-4);
-  }
-
-  .steps .steps__list {
-    margin-top: 0;
-  }
-}
 
 
