--- a/src/styles/cards/BigCard.module.css
+++ b/src/styles/cards/BigCard.module.css
@@ -30,9 +30,9 @@
 
 	.card .card__title {
 		font-family: var(--font-family-slab);
-		font-weight: 800;
-		font-size: var(--font-size-6);
-		line-height: var(--line-height-6);
+		font-weight: 500;
+		font-size: 20px;
+		line-height: 1.24;
 		letter-spacing: -0.025em;
 		margin: var(--space-3) 0;
 		text-align: center
